rustpython_original/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__character_tabulation_with_justification_alias.snap
---
source: ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..45,
            value: Constant(
                ExprConstant {
                    range: 0..45,
                    value: Str(
                        "\u{89}",
                    ),
                    kind: None,
                },
            ),
        },
    ),
]
