rustpython_original/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__fstring_parse_self_documenting_base_more.snap
---
source: ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Constant(
        ExprConstant {
            range: 2..6,
            value: Str(
                "mix ",
            ),
            kind: None,
        },
    ),
    Constant(
        ExprConstant {
            range: 6..13,
            value: Str(
                "user=",
            ),
            kind: None,
        },
    ),
    Constant(
        ExprConstant {
            range: 6..13,
            value: Str(
                "",
            ),
            kind: None,
        },
    ),
    FormattedValue(
        ExprFormattedValue {
            range: 6..13,
            value: Name(
                ExprName {
                    range: 7..11,
                    id: "user",
                    ctx: Load,
                },
            ),
            conversion: Repr,
            format_spec: None,
        },
    ),
    Constant(
        ExprConstant {
            range: 13..28,
            value: Str(
                " with text and ",
            ),
            kind: None,
        },
    ),
    Constant(
        ExprConstant {
            range: 28..37,
            value: Str(
                "second=",
            ),
            kind: None,
        },
    ),
    Constant(
        ExprConstant {
            range: 28..37,
            value: Str(
                "",
            ),
            kind: None,
        },
    ),
    FormattedValue(
        ExprFormattedValue {
            range: 28..37,
            value: Name(
                ExprName {
                    range: 29..35,
                    id: "second",
                    ctx: Load,
                },
            ),
            conversion: Repr,
            format_spec: None,
        },
    ),
]
