rustpython_original/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__hts_alias.snap
---
source: ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..9,
            value: Constant(
                ExprConstant {
                    range: 0..9,
                    value: Str(
                        "\u{88}",
                    ),
                    kind: None,
                },
            ),
        },
    ),
]
