rustpython_original/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring_equals.snap
---
source: ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    FormattedValue(
        ExprFormattedValue {
            range: 2..12,
            value: Compare(
                ExprCompare {
                    range: 3..11,
                    left: Constant(
                        ExprConstant {
                            range: 3..5,
                            value: Int(
                                42,
                            ),
                            kind: None,
                        },
                    ),
                    ops: [
                        Eq,
                    ],
                    comparators: [
                        Constant(
                            ExprConstant {
                                range: 9..11,
                                value: Int(
                                    42,
                                ),
                                kind: None,
                            },
                        ),
                    ],
                },
            ),
            conversion: None,
            format_spec: None,
        },
    ),
]
