rustpython_original/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_string_concat.snap
---
source: ruff_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..16,
            value: Constant(
                ExprConstant {
                    range: 0..16,
                    value: Str(
                        "Hello world",
                    ),
                    kind: None,
                },
            ),
        },
    ),
]
